# ncnn-picture-enhancement

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/picture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Aodnet-opt.param  GLADsim-opt.param  UNet_8-opt.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/picture/: MainActivity.java  Waterdemo.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/picture/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
